--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "prod": "NODE_ENV=production node ./bin/www",
     "populate": "node ./bin/populate.js"
   },
   "dependencies": {
